--- a/custom_components/hasl/manifest.json
+++ b/custom_components/hasl/manifest.json
@@ -4,6 +4,5 @@
   "documentation": "https://github.com/DSorlov/hasl-platform",
   "dependencies": [],
   "codeowners": ["@DSorlov"],
-  "requirements": ["hasl==2.3.1"],
-  "homeassistant": "0.92.0"
+  "requirements": ["hasl==2.3.1"]
 } 
