--- a/custom_components/hasl/manifest.json
+++ b/custom_components/hasl/manifest.json
@@ -1,9 +1,10 @@
 {
   "domain": "hasl",
   "name": "Home Assistant SL Sensor (HASL)",
-  "documentation": "https://github.com/DSorlov/hasl-platform",
+  "documentation": "https://hasl.sorlov.com",
+  "issue_tracker": "https://github.com/DSorlov/hasl-platform/issues",
   "dependencies": [],
+  "after_dependencies": [],
   "codeowners": ["@DSorlov"],
-  "requirements": ["hasl==2.3.1"],
-  "homeassistant": "0.92.0"
+  "requirements": ["hasl==2.3.1"]
 } 
